<resources>
    <string name="app_name">Map</string>
    <string name="welcome_to">Welcome to</string>
    <string name="map">MAP</string>
    <string name="go">Go</string>
    <string name="list">List of places for my trip</string>
    <string name="marker_description">Marker description</string>
    <string name="menu">Menu</string>
    <string name="Edit">Edit</string>
    <string name="Remove">Delete</string>
    <string name="Save">Save</string>
    <string name="back">Back</string>
    <string name="set_up_as_you_like">Set up as you like</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="themes">Themes</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="save">Save</string>
    <string name="enter_the_name">Enter the name of your mark</string>
    <string name="name_of_your_mark">Name of your mark</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="permission_denied">Permission to access location denied</string>
    <string name="try_again">Try again</string>
    <string name="failed_to_get_location">Failed to get location. Turn on location services.</string>
    <string name="never_miss">Never miss a remarkable spot again! With our app, you can pin locations on a map, add personalized descriptions, and save them for later access. Keep all your memories and plans right at your fingertips!</string>
    <string name="journey_tracker">Journey Tracker</string>
    <string name="close">Close</string>
    <string name="enter_new_description">Enter new description</string>
    <string name="edit_marker_description">Edit Marker Description</string>
</resources>