<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settingsFragment"
    android:background="?attr/colorSecondary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_gravity="bottom"
        android:background="?attr/colorSecondary"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/back"
            android:background="?android:selectableItemBackground"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            app:tint="?attr/colorOnPrimary"
            android:id="@+id/backMenu"
            android:layout_marginBottom="@dimen/common_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/backMenu"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="?attr/colorOnPrimary"
            android:paddingBottom="20dp"
            android:paddingTop="20sp"
            android:gravity="center"
            android:textSize="40sp"
            android:text="@string/set_up_as_you_like"/>

        <TextView
            android:id="@+id/label_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/languages"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/settings_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp" />

        <RadioGroup
            android:id="@+id/radio_group_languages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="12dp"

            app:layout_constraintTop_toBottomOf="@id/label_languages"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/radio_english"
                style="@style/Widget.App.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="true"
                android:text="@string/english"
                android:textSize="16sp"
                android:textColor="?attr/colorOnPrimary" />

            <RadioButton
                android:id="@+id/radio_russian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.App.RadioButton"
                android:textSize="16sp"
                android:checked="true"
                android:enabled="true"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/russian" />

        </RadioGroup>

        <TextView
            android:id="@+id/label_themes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/themes"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/radio_group_languages"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp" />

        <RadioGroup
            android:id="@+id/radio_group_themes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/label_themes"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/radio_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:checked="true"
                android:enabled="true"
                style="@style/Widget.App.RadioButton"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/dark_theme" />

            <RadioButton
                android:id="@+id/radio_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:checked="true"
                android:enabled="true"
                style="@style/Widget.App.RadioButton"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/light_theme" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/save_settings"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:textSize="20sp"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="10dp"
        app:strokeColor="?attr/colorOnPrimary"
        app:strokeWidth="2dp"
        android:layout_marginBottom="40dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>